# research_agents

./: .cursorrules  .env.example  .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
agents/data_preparation/: __init__.py  agent.py
agents/experiment_runner/: __init__.py  prompts.py  sandbox.py
agents/literature_review/: __init__.py  agent.py  prompts.py
agents/paper_writer/: __init__.py  agent.py  latex_builder.py
agents/plan_formulation/: agent.py
agents/review_team/: __init__.py  prompts.py
agents/review_team/reviewers/: __init__.py  base.py  novelty.py  statistical.py  writing.py
models/: research_state.py
notebooks/: gemma4_kaggle.ipynb  research_agent_v3.ipynb
src/research_agents/: orchestrator.py
src/research_agents/agents/: base_agent.py
src/research_agents/agents/data_preparation/: prompts.py  tools.py
src/research_agents/agents/experiment_runner/: agent.py  tools.py
src/research_agents/agents/literature_review/: tools.py
src/research_agents/agents/paper_writer/: prompts.py
src/research_agents/agents/plan_formulation/: __init__.py  prompts.py
src/research_agents/models/: __init__.py  agent_outputs.py  review_models.py
src/research_agents/storage/: __init__.py  vector_store.py
src/research_agents/tools/: __init__.py
src/research_agents/utils/: token_counter.py
storage/: state_manager.py
tests/: conftest.py  test_experiment_tools.py  test_models.py  test_review_team.py
tools/: arxiv_client.py  embedding.py  pdf_renderer.py
utils/: logger.py  retry.py
(+2 files in other folders)
